<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/RL"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example2.parth.sample_firebase_app.AfterLoginSupremeUsers"
    tools:showIn="@layout/activity_after_login_supreme_users">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LT1_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#576574"
        android:id="@+id/LT1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/B1_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B1_After_Login_Supreme_Users"
        android:layout_marginTop="45dp"
        android:onClick="onClickSignUpPatientAfterLoginSupremeUsers"
        android:layout_below="@+id/ST1_After_Login_Supreme_Users"
        android:layout_alignLeft="@+id/B2_After_Login_Supreme_Users"
        android:layout_alignStart="@+id/B2_After_Login_Supreme_Users"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/B2_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B2_After_Login_Supreme_Users"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/B1_After_Login_Supreme_Users"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLoginPatientAfterLoginSupremeUsers"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/B3_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B3_After_Login_Supreme_Users"
        android:layout_marginTop="41dp"
        android:onClick="onClickReadTagAfterLoginSupremeUsers"
        android:layout_below="@+id/B2_After_Login_Supreme_Users"
        android:layout_alignLeft="@+id/B2_After_Login_Supreme_Users"
        android:layout_alignStart="@+id/B2_After_Login_Supreme_Users"/>

    <Button
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/B4_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B4_After_Login_Supreme_Users"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/B3_After_Login_Supreme_Users"
        android:layout_centerHorizontal="true"
        android:onClick="onClickLogoutAfterLoginSupremeUsers"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/B5_After_Login_Supreme_Users"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B5_After_Login_Supreme_Users"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSystemExitAfterLoginSupremeUsers"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ST1_After_Login_Supreme_Users"
        android:id="@+id/ST1_After_Login_Supreme_Users"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/LT1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>
