<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:id="@+id/RL"
    android:background="#FFFFFF"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example2.parth.sample_firebase_app.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/LT1"
        android:textAlignment="center"
        android:textColor="#576574"
        android:id="@+id/LT1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET1"
        android:hint="USERNAME"
        android:textAlignment="center"
        android:textColor="#576574"
        android:layout_marginTop="55dp"
        android:layout_below="@+id/LT1"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:id="@+id/ET2"
        android:hint="PASSWORD"
        android:textAlignment="center"
        android:textColor="#576574"
        android:layout_below="@+id/ET1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"/>

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/B1"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B1"
        android:onClick="onClickLoginAdmin"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/B2"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B2"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/B1"
        android:layout_toRightOf="@+id/B1"
        android:layout_toEndOf="@+id/B1"
        android:onClick="onClickGoToForgotUsername"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/B3"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B3"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/B2"
        android:layout_alignLeft="@+id/B2"
        android:layout_alignStart="@+id/B2"
        android:onClick="onClickGoToForgotPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/B4"
        android:textAlignment="center"
        android:textColor="#32130A"
        android:background="#576574"
        android:id="@+id/B4"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="onClickSystemExit"/>

</RelativeLayout>
